tests/fixtures/invalid/pow_none_set_float.py
# Cannot call pow() with None, Set[int], Float
x = pow(None, {1, 2, 3}, 1.0)
